// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TodoQuickAdd > サーバーのバリデーションエラー表示後に入力変更するとエラーをクリアする > form 1`] = `
[
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "quickAdd",
    "placeholder": "例: 来週金曜 リリース準備",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "来週木曜 定例MTG資料",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "button",
    "textContent": "追加",
    "type": "submit",
  },
]
`;

exports[`TodoQuickAdd > サーバーのバリデーションエラー表示後に入力変更するとエラーをクリアする > text 1`] = `"クイック追加 クイック入力 追加"`;

exports[`TodoQuickAdd > 入力して送信成功すると入力欄をクリアする > form 1`] = `
[
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "quickAdd",
    "placeholder": "例: 来週金曜 リリース準備",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "button",
    "textContent": "追加",
    "type": "submit",
  },
]
`;

exports[`TodoQuickAdd > 入力して送信成功すると入力欄をクリアする > text 1`] = `"クイック追加 クイック入力 追加"`;

exports[`TodoQuickAdd > 空文字で送信すると必須エラーを表示する > form 1`] = `
[
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "quickAdd",
    "placeholder": "例: 来週金曜 リリース準備",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "button",
    "textContent": "追加",
    "type": "submit",
  },
]
`;

exports[`TodoQuickAdd > 空文字で送信すると必須エラーを表示する > text 1`] = `"クイック追加 クイック入力 タスク名を入力してください 追加"`;
